--- a/src/components/NavBNar/NavBar.module.css
+++ b/src/components/NavBNar/NavBar.module.css
@@ -2,6 +2,8 @@
     padding: 1.5rem 0;
     display: flex;
     justify-content: space-between;
+    width: 90%;
+    margin: auto;
 }
 
 .NavBar img {
