--- a/src/components/Mastercraft/MastercraftIntro.module.css
+++ b/src/components/Mastercraft/MastercraftIntro.module.css
@@ -1,4 +1,4 @@
-h1 {
+.MastercraftIntro-h1 {
     font-size: 1.25rem;
     padding: 0 1rem;
     text-align: center;
@@ -6,7 +6,7 @@ h1 {
     ;
 }
 
-p {
+.MastercraftIntro-p {
     margin: 1rem 0 1.5rem 0;
     color: hsl(0, 0%, 48%);
     font-size: .85rem;
