--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -3,5 +3,5 @@
     border-radius: .5rem;
     padding: 2.25rem 1.5rem;
     position: relative;
-    border: 1px solid hsl(0, 0%, 92%)
+    border: 1px solid hsl(0, 0%, 92%);
 }
