--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,12 @@ html {
   font-size: 16px;
 }
 
+/* html, body, #root, .App {
+  height: 100%;
+} */
+
+
 body {
-  margin: 0;
   font-family: 'Commissioner', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
