--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -7,5 +7,9 @@
     font-weight: 700;
     font-size: .9rem;
     cursor: pointer;
+}
 
+.RewardButton {
+    padding: 1rem 1.85rem;
+    font-size: .85rem;
 }
