--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -5,3 +5,14 @@
     position: relative;
     border: 1px solid hsl(0, 0%, 92%);
 }
+
+.Modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    padding: 1.5rem;
+    overflow-y: auto;
+    height: auto;
+}
