--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -13,3 +13,8 @@
     padding: 1rem 1.85rem;
     font-size: .85rem;
 }
+
+.ModalRewardButton {
+    padding: 1rem 1.75rem;
+    font-size: .8rem;
+}
