--- a/src/components/Modal/ModalRewards/ModalRewardItem.module.css
+++ b/src/components/Modal/ModalRewards/ModalRewardItem.module.css
@@ -88,6 +88,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 1.25rem;
+    text-align: center;
 }
 
 .pledgeInputGroup input {
