disable button and input when 0 left

--- a/src/components/Mastercraft/Rewards/RewardItem.module.css
+++ b/src/components/Mastercraft/Rewards/RewardItem.module.css
@@ -5,6 +5,10 @@
     border: 1px solid hsl(0, 0%, 92%);
 }
 
+.RewardItem.Disabled {
+    opacity: .5
+}
+
 .RewardItem h4 {
     font-size: .85rem;
 }
