--- a/src/components/Mastercraft/MastercraftIntro.module.css
+++ b/src/components/Mastercraft/MastercraftIntro.module.css
@@ -30,3 +30,7 @@ img[src*="bookmark"] {
     align-items: center;
     justify-content: space-between;
 }
+
+.callToAction .isBookmarked {
+    filter: invert(33%) sepia(77%) saturate(478%) hue-rotate(127deg) brightness(97%) contrast(87%);
+}
