--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -16,3 +16,9 @@
     overflow-y: auto;
     height: auto;
 }
+
+@media screen and (min-width: 768px) {
+    .Card {
+        padding: 3rem;
+    }
+}
