--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,15 @@
   padding-bottom: 4rem;
 }
 
+footer {
+  font-size: .85rem;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
 @media screen and (min-width: 768px) {
   .App {
     background-image: url(./images/image-hero-desktop.jpg)
