--- a/src/components/Mastercraft/Rewards/RewardItem.module.css
+++ b/src/components/Mastercraft/Rewards/RewardItem.module.css
@@ -26,7 +26,7 @@
     margin: 1.5rem 0;
 }
 
-.RewardItem p:nth-of-type(2) {
+#leftNumber {
     color: black;
     font-size: 2rem;
     line-height: 1.5rem;
@@ -36,10 +36,41 @@
     align-items: center;
 }
 
-.RewardItem p:nth-of-type(2) span {
+.rewardItem-footer p span {
     color: hsl(0, 0%, 48%);
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: 500;
     margin: 0 .5rem;
+}
+
+@media screen and (min-width: 768px) {
+    .RewardItem {
+        padding: 2rem 1.75rem;
+    }
+
+    .rewardItem-header, .rewardItem-footer {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #leftNumber, .RewardItem h4:nth-of-type(2) {
+        margin: 0
+    }
+
+    .RewardItem h4:nth-of-type(1) {
+        font-size: 1.15rem;
+    }
+
+    .RewardItem h4:nth-of-type(2) {
+        font-size: .9rem;
+        font-weight: 500;
+    }
+
+    .RewardItem p:nth-of-type(1) {
+        font-size: .95rem;
+        line-height: 1.5rem;
+
+    }
+
 }
