--- a/src/components/Modal/ModalRewards/ModalRewardItem.module.css
+++ b/src/components/Modal/ModalRewards/ModalRewardItem.module.css
@@ -70,17 +70,12 @@
 .pledgeForm {
     position: relative;
     text-align: center;
-    padding-top: 1.5rem;
-
-}
-
-.pledgeForm .borderTop {
-    position: absolute;
-    height: 2px;
-    left: -10.5%;
-    top: 0;
-    width: calc(100%/0.825);
-    background-color: hsl(0, 0%, 92%);
+    margin-top: 1rem;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+    padding: 1.5rem;
+    padding-bottom: 0;
+    border-top: 2px solid hsl(0, 0%, 92%);
 }
 
 .pledgeForm label {
@@ -110,4 +105,59 @@
 
 .pledgeInputGroup input:focus {
     outline: 2px solid hsl(176, 50%, 47%);
+}
+
+@media screen and (min-width: 768px) {
+    .ModalRewardItem {
+        display: grid;
+        grid-template-columns: .5fr 3fr 1fr;
+        grid-template-rows: auto auto auto;
+    }
+
+
+    .inputGroup {
+        grid-column: 1/3;
+        grid-row: 1/2
+    }
+
+    #label {
+        display: flex;
+        margin-left: 1.5rem;
+    }
+
+    .inputGroup div h4:nth-child(2) {
+        margin: 0 0 0 1rem;
+    }
+
+
+
+    .ModalRewardItem p:nth-of-type(1) {
+        grid-column: 2/4;
+        grid-row: 2/3;
+        font-size: .87rem;
+    }
+
+    .ModalRewardItem p:nth-of-type(2) {
+        grid-column: 3/4;
+        grid-row: 1/2;
+        justify-self: end;
+        margin: 0;
+    }
+
+    .pledgeForm {
+        grid-column: 1/4;
+        grid-row: 3/4;
+        display: flex;
+        align-items: center;
+
+    }
+
+    .pledgeForm .pledgeInputGroup {
+        margin: 0;
+    }
+
+    .pledgeInputGroup input {
+        margin-right: 1rem;
+    }
+
 }
