--- a/src/components/Modal/ModalThankYou.module.css
+++ b/src/components/Modal/ModalThankYou.module.css
@@ -16,3 +16,24 @@
 .ModalThankYou p {
     margin: 1rem 0;
 }
+
+@media screen and (min-width: 768px) {
+
+    .ModalThankYou h3 {
+        font-size: 1.5rem;
+    }
+
+    .ModalThankYou .check img {
+        transform: scale(1.35);
+        margin: 1rem 0 2rem 0;
+    }
+
+    .ModalThankYou p {
+        font-size: .95rem;
+    }
+
+    .ModalThankYou .button {
+        margin-bottom: 0;
+    }
+
+}
