--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -6,7 +6,7 @@
     border: 1px solid hsl(0, 0%, 92%);
 }
 
-.Modal {
+.Modal, .ModalThankYou {
     position: absolute;
     top: 0;
     left: 0;
@@ -20,5 +20,15 @@
 @media screen and (min-width: 768px) {
     .Card {
         padding: 3rem;
+    }
+
+    .Modal {
+        top: -9rem;
+    }
+
+    .ModalThankYou {
+        top: 10rem;
+        width: 75%;
+        left: 12.5%;
     }
 }
